feat: :construction: Se construye el home
Parte superior

--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
     <link rel="shortcut icon" href="storage/img/icono0.svg" type="image/svg">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
-    
 </head>
 <body>
-
+    <header class="header">
+        <div class="logo">
+            <i class="bx bx-money-withdraw"></i>
+            <h1>Inveto</h1>
+        </div>
+        <div class="burger">
+            <i class="bx bx-align-middle"></i>
+        </div>
+    </header>
+    <main class="container">
+        <section class="banner">
+            <article class="banner_title">
+                <h3>Investing tips</h3>    
+            </article>
+            <article class="banner_logo">
+                <div class="banner_boxLogo">
+                    <img src="storage/img/icono0.svg">
+                </div>
+                <div class="banner_card">
+                    <button><i class="bx bx-x"></i></button>
+                    <strong>What is an ETF?</strong>
+                    <small>By james B, PHD</small>
+                    <button>learn more</button>
+                </div>
+            </article>
+        </section>
+        <section>
+        </section>
+    </main>
 </body>
 </html>
