feat: :construction: Actividad de clase carusel
Menu y carusel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="storage/img/icono0.svg" type="image/svg">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header class="header">
@@ -24,19 +25,33 @@
             <article class="banner_title">
                 <h3>Investing tips</h3>    
             </article>
-            <article class="banner_logo">
-                <div class="banner_boxLogo">
-                    <img src="storage/img/icono0.svg">
-                </div>
+            <article class="banner_publicidad">
                 <div class="banner_card">
-                    <button><i class="bx bx-x"></i></button>
-                    <strong>What is an ETF?</strong>
-                    <small>By james B, PHD</small>
-                    <button>learn more</button>
+                    <div class="banner_logo">
+                            <img src="storage/img/icono0.svg">
+                    </div>
+                    <div class="banner_data">
+                            <button class="banner_close"><i class="bx bx-x"></i></button>
+                            <strong>What is an ETF?</strong>
+                            <small>By james B, PHD</small>
+                            <button class="banner_more">learn more</button>
+                    </div>
                 </div>
             </article>
         </section>
-        <section>
+        <section class="carusel">
+            <article class="carusel_title">
+                <h3>my cards (<span data-card="6"></span>)</h3>
+            </article>
+            <article class="carusel_card">
+                <div class="carusel_container">
+                    <div class="carusel_img">
+                        <img src="storage/img/typeCard1.svg">
+                        <small>**** 6175</small>
+                        <h2></h2>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
 </body>
