perf: :art: Pagina principal
Realizado, queda pendiente otro menu

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class="header">
         <div class="logo">
-            <i class="bx bx-money-withdraw"></i>
+            <img src="storage/img/bx-logo.svg">
             <h1>Inveto</h1>
         </div>
         <div class="burger">
-            <i class="bx bx-align-middle"></i>
+            <img src="storage/img/menu.svg">
         </div>
     </header>
     <main class="container">
@@ -28,28 +28,47 @@
             <article class="banner_publicidad">
                 <div class="banner_card">
                     <div class="banner_logo">
-                            <img src="storage/img/icono0.svg">
+                            <img src="../storage/img/icono0.svg">
                     </div>
                     <div class="banner_data">
-                            <button class="banner_close"><i class="bx bx-x"></i></button>
                             <strong>What is an ETF?</strong>
                             <small>By james B, PHD</small>
-                            <button class="banner_more">learn more</button>
+                            <button class="banner_more">Learn more</button>
                     </div>
+                    <button class="banner_close"><i class="bx bx-x"></i></button>
                 </div>
             </article>
         </section>
         <section class="carusel">
             <article class="carusel_title">
-                <h3>my cards (<span data-card="6"></span>)</h3>
+                <h3>my cards (<span data-card="6">
+                </span>)</h3>
             </article>
             <article class="carusel_card">
-                <div class="carusel_container">
-                    <div class="carusel_img">
-                        <img src="storage/img/typeCard1.svg">
+                <div class="carusel_img">
                         <small>**** 6175</small>
-                        <h2></h2>
-                    </div>
+                        <h2>$ 47,417</h2>
+                        <img src="storage/img/typeCard1.svg">
+                </div>
+                <div class="carusel_img">
+                    <small>**** 6175</small>
+                    <h2>$ 584,417</h2>
+                    <img src="storage/img/typeCard1.svg">
+                </div>
+                <div class="carusel_img">
+                    <small>**** 6175</small>
+                    <h2>$ 47,417</h2>
+                    <img src="storage/img/typeCard1.svg">
+                </div>
+                <div class="carusel_img">
+                    <small>**** 6175</small>
+                    <h2>$ 47,417</h2>
+                    <img src="storage/img/typeCard1.svg">
+                </div>
+                <div class="carusel_img">
+                    <small>**** 6175</small>
+                    <h2>$ 47,417</h2>
+                    <img src="storage/img/typeCard1.svg">
                 </div>
             </article>
         </section>
