feat: :construction: Se crea barra header
Quedamos en colocarlo de color blanco

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     
 </head>
 <body>
-
+    <header class="header">
+        <div class="logo">
+            <img src="storage/img/bx-logo.svg">
+            <h1>Inveto</h1>
+        </div>
+        <div class="burger">
+            <img src="storage/img/menu.svg">
+        </div>
+    </header>
+    <main class="balance_container">
+        
+    </main>
 </body>
 </html>
