--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="profile">
         <section class="profile_balance">
             <article class="profile_titule">
-                <h3>Hi,Arthur!</h3>
+                <h3>Hi, Arthur!</h3>
                 <p>Here's your balance</p>
             </article>
             <article class="profile_process">
@@ -53,8 +53,102 @@
                     </div>
                 </article>
             </section>
-            <article>
-
+            <article class="transactions">
+                <div class="transactions_title">
+                    <h3>Transactions</h3>
+                </div>
+                <div class="transaction_balance">
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_up">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_down">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>shoppinng</p>
+                                <small>H&M 12-57 ****</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>-157.64</p>
+                            <small>jan 14</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_up">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_down">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>shoppinng</p>
+                                <small>H&M 12-57 ****</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>-157.64</p>
+                            <small>jan 14</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_up">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_down">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>shoppinng</p>
+                                <small>H&M 12-57 ****</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>-157.64</p>
+                            <small>jan 14</small>
+                        </div>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
