style: :truck: Cambio en el nombre de variables conflictivas
Se realzian los cambios para evitar problemas de conflicto de nombre al realizar merge o pull

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <div class="banner">
+    <div class="profile_banner">
         <img src="../storage/img/banner.svg">
     </div>
     <main class="profile">
