style: :truck: Cambio en los nombres de clase
Cambio mas especifico para los nombres, por ejemplo de .logo a .balnce_logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
+    <header class="header_balance">
+        <div class="balance_logo">
             <img src="storage/img/bx-logo.svg">
             <h1>Inveto</h1>
         </div>
@@ -34,13 +34,13 @@
     <section class="graph_imagen">
         <img src="../storage/img/graphicimg.png">
     </section>
-    <div class="banner">
+    <div class="banner_balance">
         <img src="storage/img/target_img.png">
         <div class="banner_info">
             <h2>Spending</h2>
             <p>You forgot to add debt card number at payment #1323. Add it now</p>
         </div>
-        <button class="banner_close"><i class="bx bx-x"></i></button>
+        <button class="banner_close_balance"><i class="bx bx-x"></i></button>
     </div>
     
     <main class="balance_container">
