style: :lipstick: Modificacion del estilo del Profile
Estilo del profile modificado anes de realizar merge

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
                     <progress id="assets" max="100" value="40"></progress>
                 </div>
             </article>
-        </section>
-        <section class="profile_activities">
             <section class="activities_carusel">
                 <article class="activities_title">
                     <h3>activities</h3>
@@ -53,6 +51,8 @@
                     </div>
                 </article>
             </section>
+        </section>
+        <section class="profile_activities">
             <article class="transactions">
                 <div class="transactions_title">
                     <h3>Transactions</h3>
@@ -91,16 +91,16 @@
                     <div class="transaction_carusel">
                         <div class="transactions_description">
                             <div class="transaction_up">
-                                <i class="bx bxs-up-arrow"></i>
+                                <i class="bx bxs-down-arrow"></i>
                             </div>
                             <div>
-                                <p>food & beverage</p>
-                                <small>five lods</small>
+                                <p>Pato mc pato</p>
+                                <small>McDonald</small>
                             </div>
                         </div>
                         <div class="transactions_value">
-                            <p>+28.11</p>
-                            <small>feb 21</small>
+                            <p>-12.12</p>
+                            <small>feb 26</small>
                         </div>
                     </div>
                     <div class="transaction_carusel">
@@ -115,7 +115,7 @@
                         </div>
                         <div class="transactions_value">
                             <p>-157.64</p>
-                            <small>jan 14</small>
+                            <small>jan 19</small>
                         </div>
                     </div>
                     <div class="transaction_carusel">
