refactor: :lipstick: Se adapta el codigo del menu con el codigo de profile
Cambios de colores, y aglo de codigo para enlazar los html

--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#" ><i class="bx bx-home"></i></a></li>
             <li><a href="#" ><i class="bx bx-book-bookmark"></i></a></li>
-            <li><a href="#" ><i class="bx bx-grid-alt"></i></a></li>
+            <li><a href="index.html" ><i class="bx bx-grid-alt"></i></a></li>
             <li><a href="#" ><i class="bx bx-bell"></i></a></li>
             <li><a href="#" ><i class="bx bx-user-circle"></i></a></li>
         </ul>
@@ -99,8 +99,8 @@
                     </div>
                     <div class="transaction_carusel">
                         <div class="transactions_description">
-                            <div class="transaction_up">
-                                <i class="bx bxs-down-arrow"></i>
+                            <div class="transaction_down">
+                                <i class="bx bxs-up-arrow"></i>
                             </div>
                             <div>
                                 <p>Pato mc pato</p>
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                         <div class="transactions_value">
-                            <p>-12.12</p>
+                            <p>-45.12</p>
                             <small>feb 26</small>
                         </div>
                     </div>
@@ -155,6 +155,36 @@
                         <div class="transactions_value">
                             <p>-157.64</p>
                             <small>jan 14</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_up">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>January Bill</p>
+                                <small>Dany Burguer</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>+600.99</p>
+                            <small>feb 21</small>
+                        </div>
+                    </div>
+                    <div class="transaction_carusel">
+                        <div class="transactions_description">
+                            <div class="transaction_down">
+                                <i class="bx bxs-up-arrow"></i>
+                            </div>
+                            <div>
+                                <p>shoppinng</p>
+                                <small>H&M 12-57 ****</small>
+                            </div>
+                        </div>
+                        <div class="transactions_value">
+                            <p>-260.06</p>
+                            <small>jan 01</small>
                         </div>
                     </div>
                 </div>
