refactor: :adhesive_bandage: Arreglo link de imagenes
Se coloca el enlace correctamente para que aparezca la imagen segun la pagina en el enlace

--- a/balance.html
+++ b/balance.html
@@ -42,7 +42,7 @@
             <p>Assets</p><p>Debt</p><p>Income</p>
         </div>
         <section class="graph_imagen">
-            <img src="../storage/img/graphicimg.png">
+            <img src="storage/img/graphicimg.png">
         </section>
         <div class="banner_balance">
             <img src="storage/img/target_img.png">
