--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <article class="banner_publicidad">
                 <div class="banner_card">
                     <div class="banner_logo">
-                            <img src="../storage/img/icono0.svg">
+                            <img src="storage/img/icono0.svg">
                     </div>
                     <div class="banner_data">
                             <strong>What is an ETF?</strong>
