--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <div class="profile_banner">
-        <img src="../storage/img/banner.svg">
+        <img src="storage/img/banner.svg">
     </div>
     <main class="profile">
         <section class="profile_balance">
